--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,12 @@
 
 :root{
 	--grey:#F4F4F4;
-	--black:#000;
+	--black3:#000;
 	--dark-medium:#353535;
 	--white:#fff;
 	--ligth-black:#232323;
 	--purple:#5D47E9;
 	--mint:#E4F6FF;
-	--green:#D3FF24;
+	--green:#DFF24;
 }
 
