[EDIT] layer & apply to optimize the code

--- a/input.css
+++ b/input.css
@@ -4,3 +4,13 @@
 
 
 
+@layer components {
+  .feature{
+    @apply  flex flex-col border-2 border-solid border-darkMedium h-full w-[320px]  gap-4;
+  }
+
+  .boxe 
+  {
+    @apply border border-solid border-white rounded-2xl w-[350px] p-8 flex flex-col justify-center md:items-center;
+  }
+}
