--- a/output.css
+++ b/output.css
@@ -558,6 +558,37 @@ video {
   width: 100%;
 }
 
+.feature {
+  display: flex;
+  height: 100%;
+  width: 320px;
+  flex-direction: column;
+  gap: 1rem;
+  border-width: 2px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(53 53 53 / var(--tw-border-opacity));
+}
+
+.boxe {
+  display: flex;
+  width: 350px;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 1rem;
+  border-width: 1px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  padding: 2rem;
+}
+
+@media (max-width: 767px) {
+  .boxe {
+    align-items: center;
+  }
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -635,22 +666,6 @@ video {
 
 .top-0 {
   top: 0px;
-}
-
-.top-5 {
-  top: 1.25rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-24 {
-  top: 6rem;
 }
 
 .isolate {
@@ -734,16 +749,6 @@ video {
   margin-right: 2rem;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.mx-2 {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -768,6 +773,10 @@ video {
   margin-left: 2rem;
 }
 
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
 .mt-16 {
   margin-top: 4rem;
 }
@@ -790,14 +799,6 @@ video {
 
 .mt-6 {
   margin-top: 1.5rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
-}
-
-.mt-14 {
-  margin-top: 3.5rem;
 }
 
 .box-border {
@@ -921,14 +922,6 @@ video {
 
 .w-1\/3 {
   width: 33.333333%;
-}
-
-.w-\[320px\] {
-  width: 320px;
-}
-
-.w-\[350px\] {
-  width: 350px;
 }
 
 .w-\[88vw\] {
@@ -1485,10 +1478,6 @@ video {
   gap: 2rem;
 }
 
-.gap-5 {
-  gap: 1.25rem;
-}
-
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
@@ -1883,10 +1872,6 @@ video {
   border-width: 1px;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
 .border-x {
   border-left-width: 1px;
   border-right-width: 1px;
@@ -1943,16 +1928,6 @@ video {
 
 .border-none {
   border-style: none;
-}
-
-.border-darkMedium {
-  --tw-border-opacity: 1;
-  border-color: rgb(53 53 53 / var(--tw-border-opacity));
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
@@ -2093,13 +2068,14 @@ video {
      object-fit: scale-down;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .px-4 {
@@ -2117,24 +2093,14 @@ video {
   padding-bottom: 0.5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .pb-10 {
@@ -2719,10 +2685,6 @@ video {
 }
 
 @media (max-width: 639px) {
-  .sm\:w-1\/2 {
-    width: 50%;
-  }
-
   .sm\:underline {
     text-decoration-line: underline;
   }
@@ -2768,10 +2730,6 @@ video {
     margin-top: 2rem;
   }
 
-  .md\:block {
-    display: block;
-  }
-
   .md\:flex {
     display: flex;
   }
@@ -2794,10 +2752,6 @@ video {
 
   .md\:w-\[150px\] {
     width: 150px;
-  }
-
-  .md\:w-\[450px\] {
-    width: 450px;
   }
 
   .md\:w-full {
@@ -2834,6 +2788,11 @@ video {
     line-height: 2.25rem;
   }
 
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
@@ -2855,12 +2814,6 @@ video {
   }
 }
 
-@media (max-width: 1023px) {
-  .lg\:hidden {
-    display: none;
-  }
-}
-
 @media (prefers-color-scheme: dark) {
   @media (max-width: 1023px) {
     .dark\:lg\:hover\:\[paint-order\:markers\]:hover {
@@ -2868,6 +2821,3 @@ video {
     }
   }
 }
-
-
-
