--- a/output.css
+++ b/output.css
@@ -668,22 +668,6 @@ video {
   top: 0px;
 }
 
-.left-0 {
-  left: 0px;
-}
-
-.left-1\/2 {
-  left: 50%;
-}
-
-.top-1\/2 {
-  top: 50%;
-}
-
-.right-1\/2 {
-  right: 50%;
-}
-
 .isolate {
   isolation: isolate;
 }
@@ -692,16 +676,16 @@ video {
   isolation: auto;
 }
 
-.z-20 {
-  z-index: 20;
-}
-
 .z-0 {
   z-index: 0;
 }
 
 .z-10 {
   z-index: 10;
+}
+
+.z-20 {
+  z-index: 20;
 }
 
 .float-start {
@@ -778,6 +762,10 @@ video {
   margin-right: auto;
 }
 
+.-mt-40 {
+  margin-top: -10rem;
+}
+
 .mb-10 {
   margin-bottom: 2.5rem;
 }
@@ -838,28 +826,12 @@ video {
   margin-top: -3rem;
 }
 
-.-mt-24 {
-  margin-top: -6rem;
+.-mt-14 {
+  margin-top: -3.5rem;
 }
 
-.-mt-28 {
-  margin-top: -7rem;
-}
-
-.-mt-32 {
-  margin-top: -8rem;
-}
-
-.-mt-36 {
-  margin-top: -9rem;
-}
-
-.-mt-40 {
-  margin-top: -10rem;
-}
-
-.mt-8 {
-  margin-top: 2rem;
+.-mt-16 {
+  margin-top: -4rem;
 }
 
 .box-border {
@@ -1047,16 +1019,6 @@ video {
 
 .border-separate {
   border-collapse: separate;
-}
-
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .\!transform {
@@ -2186,20 +2148,12 @@ video {
   padding-bottom: 2rem;
 }
 
-.pt-16 {
-  padding-top: 4rem;
-}
-
-.pt-8 {
-  padding-top: 2rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
-}
-
 .pt-12 {
   padding-top: 3rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
 }
 
 .text-left {
@@ -2811,6 +2765,10 @@ video {
 
   .md\:mt-8 {
     margin-top: 2rem;
+  }
+
+  .md\:mt-0 {
+    margin-top: 0px;
   }
 
   .md\:flex {
